--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<!DOCTYPE html>
-<html>
-<body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script type="text/javascript">
 
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    document.addEventListener('mouseup', function (e) {
+        var selection = window.getSelection().toString();
+        if (selection.length > 0) {
+        };
+        $.post("receiver", { name: selection }, function () {
+        });
 
-</body>
-</html>
+    }, false);
+
+
+</script>
+This will send data using AJAX to Python:
+
+Coronavirus Live Updates: U.S. Deaths Could Exceed 200,000; Social Curbs Extended
+Americans were advised to avoid nonessential travel and gatherings of more than 10 <br />people until at least April 30. Deaths nationwide approached 2,500, with more than <br />1,000 in New York. Spain asked residents to go into <br />“hibernation” as the death toll climbed.
+
+RIGHT NOWPrime Minister Benjamin Netanyahu of Israel announced that<br /> he and his close advisers were isolating themselves after<br /> an aide was infected.
+<br />
+동해물과 백두산이 마르고 닳도록<br />
+안양시 만안구 안양동 <a href="https://www.naver.com/">네이버로 가기</a>
+<br /><br />
+
